[package]
name = "redis-rust-tutorial"
version = "0.1.1"
authors = ["abhishek <abhirockzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.1", features = ["tls","json"] }
rand = "0.8.1"